# CMB_denoising

./: .gitignore  .gitmodules  README.md  atlast.ipynb  pixi.toml
nifty/: varinference.py
nifty_maria/: LICENSE  README.md  atmosphere_downsampling_AtLAST.ipynb  nifty_basics.ipynb  nifty_maria_atmosphere_mapsampling_AtLAST.ipynb  nifty_maria_attempt.ipynb  nifty_maria_mapsampling.ipynb  pyproject.toml  setup.py
nifty_maria/atmosphere_tods/: nifty_maria_atmosphere_tods.ipynb
nifty_maria/nifty_maria/: FitHandler.py  SignalModels.py  __init__.py  mapsampling_jax.py  maria_steering.py  modified_CFM.py  plotting.py
nifty_maria/nifty_maria.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nifty_maria/nifty_maria/configs/: atlast.yaml  mustang.yaml  test.yaml
nifty_maria/python/: mapsampling_jax.py
nifty_maria/simulated/: mustang-2_1.fits  mustang-2_10.fits  mustang-2_2.fits  mustang-2_25.fits  mustang-2_3.fits  mustang-2_30.fits  mustang-2_35.fits  mustang-2_40.fits  mustang-2_5.fits  mustang-2_final_20.fits
nifty_maria/simulated/BAK/: mustang-2_15.fits  mustang-2_20.fits  mustang-2_45.fits  mustang-2_final.fits
nifty_maria/steering/: steering_full.py  test_steering.py
nifty_maria/steering_dev/: detsplitting_full.py  test.ipynb
nifty_maria/tests/: convtest.ipynb  test_dependencies.py  test_dependencies_maria.py
transformer_maria/: first_attempt.ipynb
tutorials/: AtLASTPredictions.ipynb  CustomMapSimulations.ipynb  MUSTANG-2_cluster.ipynb  MockObservationsWithMustang2.ipynb  Mustang2_playground.ipynb  test.ipynb  timeplots_moving.ipynb
(+4 files in other folders)
